<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.giffing.bucket4j.spring.boot.starter</groupId>
	<artifactId>bucket4j-spring-boot-starter-parent</artifactId>
	<version>${revision}</version>
	<packaging>pom</packaging>
	<name>bucket4j-spring-boot-starter-parent</name>
	<description>Spring Boot Starter für Bucket4J</description>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.2</version>
		<relativePath />
	</parent>
	<modules>
		<module>bucket4j-spring-boot-starter-context</module>
		<module>bucket4j-spring-boot-starter</module>
		<module>examples/general-tests</module>
        <module>examples/caffeine</module>
        <module>examples/ehcache</module>
        <module>examples/hazelcast</module>
        <module>examples/webflux</module>
        <module>examples/redis-jedis</module>
		<module>examples/redis-lettuce</module>
		<module>examples/redis-redisson</module>
        <module>examples/webflux-infinispan</module>
    </modules>
	<url>https://github.com/MarcGiffing/bucket4j-spring-boot-starter</url>
	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
		</license>
	</licenses>
	<scm>
		<url>https://github.com/MarcGiffing/bucket4j-spring-boot-starter/</url>
		<connection>scm:git:https://github.com/MarcGiffing/bucket4j-spring-boot-starter.git</connection>
		<developerConnection>scm:git:https://github.com/MarcGiffing/bucket4j-spring-boot-starter.git</developerConnection>
		<tag>bucket4j-spring-boot-starter-parent-0.3.4</tag>
	</scm>
	<properties>
		<revision>0.14.0-RC2</revision>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>17</java.version>
		<bucket4j.version>8.15.0</bucket4j.version>
		<spring-cloud-starter-gateway.version>5.0.1</spring-cloud-starter-gateway.version>
	</properties>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.giffing.bucket4j.spring.boot.starter</groupId>
				<artifactId>bucket4j-spring-boot-starter</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.giffing.bucket4j.spring.boot.starter</groupId>
				<artifactId>bucket4j-spring-boot-starter-context</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-starter-gateway-server-webflux</artifactId>
				<version>${spring-cloud-starter-gateway.version}</version>
			</dependency>
			<dependency>
				<groupId>com.bucket4j</groupId>
				<artifactId>bucket4j_jdk17-core</artifactId>
				<version>${bucket4j.version}</version>
			</dependency>
			<dependency>
				<groupId>com.bucket4j</groupId>
				<artifactId>bucket4j_jdk17-jcache</artifactId>
				<version>${bucket4j.version}</version>
			</dependency>
			<dependency>
				<groupId>com.bucket4j</groupId>
				<artifactId>bucket4j_jdk17-hazelcast</artifactId>
				<version>${bucket4j.version}</version>
			</dependency>
			<dependency>
				<groupId>com.bucket4j</groupId>
				<artifactId>bucket4j_jdk17-redis-common</artifactId>
				<version>${bucket4j.version}</version>
			</dependency>
			<dependency>
				<groupId>com.bucket4j</groupId>
				<artifactId>bucket4j_jdk17-jedis</artifactId>
				<version>${bucket4j.version}</version>
			</dependency>
			<dependency>
				<groupId>com.bucket4j</groupId>
				<artifactId>bucket4j_jdk17-redis</artifactId>
				<version>${bucket4j.version}</version>
			</dependency>
			<dependency>
				<groupId>com.bucket4j</groupId>
				<artifactId>bucket4j_jdk17-redisson</artifactId>
				<version>${bucket4j.version}</version>
			</dependency>
			<dependency>
				<groupId>com.bucket4j</groupId>
				<artifactId>bucket4j_jdk17-lettuce</artifactId>
				<version>${bucket4j.version}</version>
			</dependency>
			<dependency>
				<groupId>com.bucket4j</groupId>
				<artifactId>bucket4j_jdk17-ignite</artifactId>
				<version>${bucket4j.version}</version>
			</dependency>
			<dependency>
				<groupId>com.bucket4j</groupId>
				<artifactId>bucket4j_jdk17-infinispan</artifactId>
				<version>${bucket4j.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>1.7.0</version>
				<configuration>
					<updatePomFile>true</updatePomFile>
					<flattenMode>resolveCiFriendliesOnly</flattenMode>
				</configuration>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten.clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.7.0</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://ossrh-staging-api.central.sonatype.com</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>
		</plugins>
	</build>
    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>
	<profiles>
		<profile>
			<id>deploy</id>
			<modules>
				<module>bucket4j-spring-boot-starter-context</module>
				<module>bucket4j-spring-boot-starter</module>
			</modules>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.2.8</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
                </plugins>
			</build>
		</profile>
	</profiles>
</project>
